# logdriver

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: python-app.yml
flumed/: cli.py
logdriver/: cli.py  server.py
tests/: test_cli.py
