[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flumed"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT License"}
authors = [
    {name = "Steve King"},
    {email = "steve@steveking.site"}
]
keywords = ["logging", "logger", "microservice", "cli"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Logging"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
    "tox",
    "coverage",
    "build",
    "pip-compile"
]

[project.urls]
homepage = "https://github.com/sjking/flumed"

[tool.setuptools.packages.find]
include = ["flumed*"]
exclude = ["tests*"]

[project.scripts]
flumed = "flumed.cli:main"
